# ScreenCaptureService

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
client/: CMakeLists.txt  main.cpp
client/demo/: CMakeLists.txt  main.cpp
client/include/: ScreenCaptureApi.h
client/src/: HandlerManager.hpp  ScreenCaptureApi.cpp  ScreenCaptureApi.h  ScreenCaptureApiImpl.cpp  ScreenCaptureApiImpl.h
client/src/handler/: ConnectResultHandler.cpp  ConnectResultHandler.h  Handler.h  ImageDataHandler.cpp  ImageDataHandler.h  QueryScreenImageResultHandler.cpp  QueryScreenImageResultHandler.h  SubscriptionHandler.cpp  SubscriptionHandler.h
script/: build.bat
server/: CMakeLists.txt  main.cpp
server/config/: server_config.json
server/src/: Router.hpp  ScreenCaptureServer.cpp  ScreenCaptureServer.hpp  ServerConfig.hpp
server/src/handler/: ConnectHandler.cpp  ConnectHandler.h  Handler.h  QueryScreenImageHandler.cpp  QueryScreenImageHandler.h
server/src/screencapture/: ScreenCapture.cpp  ScreenCapture.h
util/: CMakeLists.txt
util/messagehelper/: CMakeLists.txt  MessageHelper.hpp
util/screencapture/: CMakeLists.txt  ScreenCapture.cpp  ScreenCapture.h
util/threadsafequeue/: CMakeLists.txt  threadsafe_queue.hpp
